// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Close displays Close Icon 1`] = `
<svg
  fill="none"
  height="25"
  role="presentation"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18.008 6.07l-12 12M6.008 6.07l12 12"
    stroke="red"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Close displays Closr Icon with no args 1`] = `
<svg
  fill="none"
  height="25"
  role="presentation"
  width="25"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18.008 6.07l-12 12M6.008 6.07l12 12"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Code displays Code Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M16 18l6-6-6-6M8 6l-6 6 6 6"
    stroke="red"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Code displays Code Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M16 18l6-6-6-6M8 6l-6 6 6 6"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Dial displays Dial Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="3.5"
    cy="2.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="2.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="2.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="2.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="2.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="2.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="2.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="2.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="2.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="8.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="8.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="8.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="8.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="8.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="8.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="8.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="8.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="8.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="14.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="14.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="14.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="14.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="14.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="14.5"
    fill="red"
    r="2.5"
  />
  <ellipse
    cx="11.5"
    cy="20.5263"
    fill="red"
    rx="2.5"
    ry="2.52632"
  />
  <ellipse
    cx="11.5"
    cy="20.5263"
    fill="red"
    rx="2.5"
    ry="2.52632"
  />
  <ellipse
    cx="11.5"
    cy="20.5263"
    fill="red"
    rx="2.5"
    ry="2.52632"
  />
  <circle
    cx="19.5"
    cy="14.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="14.5"
    fill="red"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="14.5"
    fill="red"
    r="2.5"
  />
</svg>
`;

exports[`Icon Dial displays Dial Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="3.5"
    cy="2.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="2.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="2.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="2.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="2.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="2.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="2.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="2.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="2.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="8.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="8.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="8.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="8.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="8.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="8.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="8.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="8.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="8.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="14.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="14.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="3.5"
    cy="14.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="14.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="14.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="11.5"
    cy="14.5"
    fill="currentColor"
    r="2.5"
  />
  <ellipse
    cx="11.5"
    cy="20.5263"
    fill="currentColor"
    rx="2.5"
    ry="2.52632"
  />
  <ellipse
    cx="11.5"
    cy="20.5263"
    fill="currentColor"
    rx="2.5"
    ry="2.52632"
  />
  <ellipse
    cx="11.5"
    cy="20.5263"
    fill="currentColor"
    rx="2.5"
    ry="2.52632"
  />
  <circle
    cx="19.5"
    cy="14.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="14.5"
    fill="currentColor"
    r="2.5"
  />
  <circle
    cx="19.5"
    cy="14.5"
    fill="currentColor"
    r="2.5"
  />
</svg>
`;

exports[`Icon Exit displays Exit Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6M15 3h6v6M10 14L21 3"
    stroke="red"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Exit displays Exit Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6M15 3h6v6M10 14L21 3"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Facebook displays User Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3V2z"
    stroke="red"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Facebook displays User Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3V2z"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Github displays Github Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10S2 17.514 2 12 6.486 2 12 2zm0-2C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm0 6a6 6 0 00-1.896 11.693c.3.056.396-.13.396-.289v-1.117c-1.669.363-2.017-.707-2.017-.707-.272-.693-.666-.878-.666-.878-.544-.373.041-.365.041-.365.603.042.92.619.92.619.535.917 1.403.652 1.746.499.054-.388.209-.652.381-.802-1.333-.152-2.733-.667-2.733-2.965 0-.655.234-1.19.618-1.61-.062-.153-.268-.764.058-1.59 0 0 .504-.161 1.65.615A5.782 5.782 0 0112 8.901c.51.002 1.023.069 1.503.202 1.146-.776 1.648-.615 1.648-.615.327.826.121 1.437.06 1.588.385.42.617.955.617 1.61 0 2.305-1.404 2.812-2.74 2.96.216.186.412.551.412 1.111v1.646c0 .16.096.347.4.288A6 6 0 0012 6z"
    fill="red"
  />
</svg>
`;

exports[`Icon Github displays Github Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10S2 17.514 2 12 6.486 2 12 2zm0-2C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm0 6a6 6 0 00-1.896 11.693c.3.056.396-.13.396-.289v-1.117c-1.669.363-2.017-.707-2.017-.707-.272-.693-.666-.878-.666-.878-.544-.373.041-.365.041-.365.603.042.92.619.92.619.535.917 1.403.652 1.746.499.054-.388.209-.652.381-.802-1.333-.152-2.733-.667-2.733-2.965 0-.655.234-1.19.618-1.61-.062-.153-.268-.764.058-1.59 0 0 .504-.161 1.65.615A5.782 5.782 0 0112 8.901c.51.002 1.023.069 1.503.202 1.146-.776 1.648-.615 1.648-.615.327.826.121 1.437.06 1.588.385.42.617.955.617 1.61 0 2.305-1.404 2.812-2.74 2.96.216.186.412.551.412 1.111v1.646c0 .16.096.347.4.288A6 6 0 0012 6z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon Hamburger displays Hamburger Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <rect
    fill="red"
    height="3"
    rx="1"
    width="20"
    x="2"
    y="3"
  />
  <rect
    fill="red"
    height="3"
    rx="1"
    width="20"
    x="2"
    y="8"
  />
  <rect
    fill="red"
    height="3"
    rx="1"
    width="20"
    x="2"
    y="13"
  />
</svg>
`;

exports[`Icon Hamburger displays Hamburger Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <rect
    fill="currentColor"
    height="3"
    rx="1"
    width="20"
    x="2"
    y="3"
  />
  <rect
    fill="currentColor"
    height="3"
    rx="1"
    width="20"
    x="2"
    y="8"
  />
  <rect
    fill="currentColor"
    height="3"
    rx="1"
    width="20"
    x="2"
    y="13"
  />
</svg>
`;

exports[`Icon Home displays Home Icon 1`] = `
<svg
  fill="none"
  height="24"
  preserveAspectRatio="xMidYMid"
  role="presentation"
  viewBox="0 0 20 22"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M1 8l9-7 9 7v11a2 2 0 01-2 2H3a2 2 0 01-2-2V8z"
    stroke="red"
    stroke-width="2"
  />
  <path
    d="M7 21V11h6v10"
    stroke="red"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Home displays Home Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  preserveAspectRatio="xMidYMid"
  role="presentation"
  viewBox="0 0 20 22"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M1 8l9-7 9 7v11a2 2 0 01-2 2H3a2 2 0 01-2-2V8z"
    stroke="currentColor"
    stroke-width="2"
  />
  <path
    d="M7 21V11h6v10"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Instagram displays User Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17 2H7a5 5 0 00-5 5v10a5 5 0 005 5h10a5 5 0 005-5V7a5 5 0 00-5-5z"
    stroke="red"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
  <path
    d="M16 11.37a4 4 0 11-7.914 1.174A4 4 0 0116 11.37zM17.5 6.5h.01"
    stroke="red"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Instagram displays User Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17 2H7a5 5 0 00-5 5v10a5 5 0 005 5h10a5 5 0 005-5V7a5 5 0 00-5-5z"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
  <path
    d="M16 11.37a4 4 0 11-7.914 1.174A4 4 0 0116 11.37zM17.5 6.5h.01"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon LoadingIndicator displays icon with no args 1`] = `
<svg
  aria-busy="true"
  aria-live="polite"
  data-chromatic="ignore"
  height="80"
  role="status"
  width="80"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <rect
    fill="#fe718d"
    height="12"
    rx="3"
    ry="6"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.9166666666666666s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#f47e60"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(30 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.8333333333333334s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#f8b26a"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(60 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.75s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#abbd81"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(90 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.6666666666666666s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#849b87"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(120 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.5833333333333334s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#6492ac"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(150 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.5s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#637cb5"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(180 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.4166666666666667s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#6a63b6"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(210 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.3333333333333333s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#fe718d"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(240 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.25s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#f47e60"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(270 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.16666666666666666s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#f8b26a"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(300 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="-0.08333333333333333s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
  <rect
    fill="#abbd81"
    height="12"
    rx="3"
    ry="6"
    transform="rotate(330 50 50)"
    width="6"
    x="47"
    y="24"
  >
    <animate
      attributeName="opacity"
      begin="0s"
      dur="1s"
      keyTimes="0;1"
      repeatCount="indefinite"
      values="1;0"
    />
  </rect>
</svg>
`;

exports[`Icon Location displays Location Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 1118 0z"
    stroke="red"
    stroke-width="2"
  />
  <path
    d="M12 13a3 3 0 100-6 3 3 0 000 6z"
    stroke="red"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Location displays Location Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 1118 0z"
    stroke="currentColor"
    stroke-width="2"
  />
  <path
    d="M12 13a3 3 0 100-6 3 3 0 000 6z"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Lock displays Lock Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M19 11H5a2 2 0 00-2 2v7a2 2 0 002 2h14a2 2 0 002-2v-7a2 2 0 00-2-2zM7 11V7a5 5 0 1110 0v4"
    stroke="red"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Lock displays Lock Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M19 11H5a2 2 0 00-2 2v7a2 2 0 002 2h14a2 2 0 002-2v-7a2 2 0 00-2-2zM7 11V7a5 5 0 1110 0v4"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Mail displays Mail Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M4 5c-.548 0-1 .452-1 1v12c0 .548.452 1 1 1h16c.548 0 1-.452 1-1V6c0-.548-.452-1-1-1H4zM1 6c0-1.652 1.348-3 3-3h16c1.652 0 3 1.348 3 3v12c0 1.652-1.348 3-3 3H4c-1.652 0-3-1.348-3-3V6z"
    fill="red"
  />
  <path
    d="M1.18 5.427a1 1 0 011.393-.246L12 11.779l9.427-6.598a1 1 0 011.146 1.638l-10 7a1 1 0 01-1.146 0l-10-7a1 1 0 01-.246-1.392z"
    fill="red"
  />
</svg>
`;

exports[`Icon Mail displays Mail Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M4 5c-.548 0-1 .452-1 1v12c0 .548.452 1 1 1h16c.548 0 1-.452 1-1V6c0-.548-.452-1-1-1H4zM1 6c0-1.652 1.348-3 3-3h16c1.652 0 3 1.348 3 3v12c0 1.652-1.348 3-3 3H4c-1.652 0-3-1.348-3-3V6z"
    fill="currentColor"
  />
  <path
    d="M1.18 5.427a1 1 0 011.393-.246L12 11.779l9.427-6.598a1 1 0 011.146 1.638l-10 7a1 1 0 01-1.146 0l-10-7a1 1 0 01-.246-1.392z"
    fill="currentColor"
  />
</svg>
`;

exports[`Icon Map displays Map Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M1 6v16l7-4 8 4 7-4V2l-7 4-8-4-7 4zM8 2v16M16 6v16"
    stroke="red"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Map displays Map Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M1 6v16l7-4 8 4 7-4V2l-7 4-8-4-7 4zM8 2v16M16 6v16"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Settings displays Settings Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M12 15a3 3 0 100-6 3 3 0 000 6z"
    stroke="red"
    stroke-width="2"
  />
  <path
    d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a1.998 1.998 0 010 2.83 1.998 1.998 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-4 0v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a1.998 1.998 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 110-4h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 112.83-2.83l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 114 0v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 013.417 1.415 2 2 0 01-.587 1.415l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 010 4h-.09a1.65 1.65 0 00-1.51 1v0z"
    stroke="red"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Settings displays Settings Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M12 15a3 3 0 100-6 3 3 0 000 6z"
    stroke="currentColor"
    stroke-width="2"
  />
  <path
    d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a1.998 1.998 0 010 2.83 1.998 1.998 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-4 0v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a1.998 1.998 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 110-4h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 112.83-2.83l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 114 0v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 013.417 1.415 2 2 0 01-.587 1.415l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 010 4h-.09a1.65 1.65 0 00-1.51 1v0z"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Time displays Time Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M12 19a7 7 0 100-14 7 7 0 000 14z"
    stroke="red"
    stroke-width="2"
  />
  <path
    d="M12 9v3l1.5 1.5M7.49 6.65l.35-3.83A2 2 0 019.83 1h4.35a2 2 0 012 1.82l.35 3.83m-.02 10.7l-.35 3.83a2 2 0 01-2 1.82H9.83a2 2 0 01-2-1.82l-.35-3.83h9.03z"
    stroke="red"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Time displays Time Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M12 19a7 7 0 100-14 7 7 0 000 14z"
    stroke="currentColor"
    stroke-width="2"
  />
  <path
    d="M12 9v3l1.5 1.5M7.49 6.65l.35-3.83A2 2 0 019.83 1h4.35a2 2 0 012 1.82l.35 3.83m-.02 10.7l-.35 3.83a2 2 0 01-2 1.82H9.83a2 2 0 01-2-1.82l-.35-3.83h9.03z"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Twitter displays User Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5 0-.278-.028-.556-.08-.83A7.72 7.72 0 0023 3v0z"
    stroke="red"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Twitter displays User Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5 0-.278-.028-.556-.08-.83A7.72 7.72 0 0023 3v0z"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon User displays User Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2M12 11a4 4 0 100-8 4 4 0 000 8z"
    stroke="red"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon User displays User Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs />
  <path
    d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2M12 11a4 4 0 100-8 4 4 0 000 8z"
    stroke="currentColor"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Youtube displays User Icon 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M22.54 6.42a2.78 2.78 0 00-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 00-1.94 2A29 29 0 001 11.75a29 29 0 00.46 5.33A2.78 2.78 0 003.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 001.94-2c.312-1.732.466-3.49.46-5.25a29.005 29.005 0 00-.46-5.33v0z"
    stroke="red"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
  <path
    d="M9.75 15.02l5.75-3.27-5.75-3.27v6.54z"
    stroke="red"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icon Youtube displays User Icon with no args 1`] = `
<svg
  fill="none"
  height="24"
  role="presentation"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M22.54 6.42a2.78 2.78 0 00-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 00-1.94 2A29 29 0 001 11.75a29 29 0 00.46 5.33A2.78 2.78 0 003.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 001.94-2c.312-1.732.466-3.49.46-5.25a29.005 29.005 0 00-.46-5.33v0z"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
  <path
    d="M9.75 15.02l5.75-3.27-5.75-3.27v6.54z"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;
